Mon Aug 30 11:31:00 1999  Brian Gough  <bjg@network-theory.co.uk>

	* bsearch.c: made gsl_interp_bsearch (formerly interp_bsearch) an
 	exported function, since it is needed by the inline version of
 	gsl_interp_accel_find in gsl_interp.h
 
Tue Nov 17 16:52:00 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added #include <config.h> to all top-level source files

	* renamed test_interp.c to test.c

	* test_interp.c: got rid of unused function alloc_xy_table

Fri Nov 13 16:50:05 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* clean up for make strict, use size_t instead of unsigned int

1998-11-06    <bjg@ancho.lanl.gov>

	* added const to several declarations where needed.
	
