@@ -1,3 +1,9 @@
+Tue Apr 11 19:59:01 2000  Brian Gough  <bjg@network-theory.co.uk>
+
+	* bsimp.c (bsimp_step_local): changed gsl_la prefix to gsl_linalg,
+ 	new naming convention
+	
+
 Fri Oct  1 15:46:13 1999  Brian Gough  <bjg@network-theory.co.uk>
 
 	* bsimp.c: converted to use new-style block/vector code
