@@ -1,3 +1,9 @@
+Tue Apr 11 19:56:25 2000  Brian Gough  <bjg@network-theory.co.uk>
+
+	* cspline.c (cspline_calc_periodic): changed occurrence of gsl_la
+ 	name to new gsl_linalg prefix, gsl_linalg_solve_symm_cyc_tridiag
+	(cspline_calc_natural): ditto
+
 Mon Aug 30 11:31:00 1999  Brian Gough  <bjg@network-theory.co.uk>
 
 	* bsearch.c: made gsl_interp_bsearch (formerly interp_bsearch) an
